# llamelphi

./: .gitignore  ARCHITECTURE_V3.md  README.md  ROADMAP.md  knowledge_beck.md  knowledge_longitudinal.md  knowledge_tech_handbook.md  manual.md  sdd.md  todo.md
elite_core/: .dockerignore  Cargo.toml  Dockerfile
elite_core/src/: agent.rs  embedding.rs  indexing.rs  lib.rs  main.rs  model.rs  native_inference.rs  rag.rs
elite_mobile_gui/: pubspec.yaml
elite_mobile_gui/lib/: main.dart
elite_mobile_gui/lib/providers/: chat_provider.dart  session_provider.dart
elite_mobile_gui/lib/services/: api_service.dart
elite_mobile_gui/lib/widgets/: viz_chart.dart
prompts/: system_conflict_detector.txt  system_consensus_code.txt  system_devils_advocate.txt  system_drafter_nanbeige.txt  system_format_faq.txt  system_format_slides.txt  system_format_summary.txt  system_intent_analyzer.txt  system_query_refiner.txt  system_reasoner_deepseek.txt  system_reranker.txt  system_reviewer_gemma.txt  system_reviewer_smollm.txt  system_simple_responder.txt  system_synthesizer_phi.txt
vector_db/: history.db
